# agnosai

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  ROADMAP.md  SECURITY.md  bench-history.csv  benchmarks.md  codecov.yml  deny.toml
.github/workflows/: ci.yml  release.yml
benches/: approval.rs  audit.rs  definitions.rs  fleet.rs  ipc.rs  learning.rs  llm_router.rs  orchestrator.rs  placement.rs  prompt_guard.rs  pubsub.rs  relay.rs  resource.rs  sandbox.rs  scheduler.rs  scoring.rs  serde_types.rs  server.rs  tools.rs
crates/agnosai-core/: Cargo.toml
crates/agnosai-core/src/: agent.rs  crew.rs  error.rs  lib.rs  message.rs  resource.rs  task.rs
crates/agnosai-definitions/: Cargo.toml
crates/agnosai-definitions/presets/: data-engineering-lean.json  quality-lean.json  quality-standard.json  software-engineering-lean.json
crates/agnosai-definitions/src/: assembler.rs  lib.rs  loader.rs  packaging.rs  versioning.rs
crates/agnosai-fleet/: Cargo.toml
crates/agnosai-fleet/src/: coordinator.rs  federation.rs  gpu.rs  lib.rs  placement.rs  registry.rs  relay.rs  state.rs
crates/agnosai-learning/: Cargo.toml
crates/agnosai-learning/src/: capability.rs  lib.rs  optimizer.rs  profile.rs  replay.rs  strategy.rs
crates/agnosai-llm/: Cargo.toml
crates/agnosai-llm/src/: budget.rs  cache.rs  health.rs  lib.rs  provider.rs  rate_limiter.rs  router.rs
crates/agnosai-llm/src/providers/: anthropic.rs  deepseek.rs  groq.rs  hoosh.rs  lmstudio.rs  mistral.rs  mod.rs  ollama.rs  openai.rs
crates/agnosai-orchestrator/: Cargo.toml
crates/agnosai-orchestrator/src/: crew_runner.rs  ipc.rs  lib.rs  orchestrator.rs  pubsub.rs  scheduler.rs  scoring.rs
crates/agnosai-sandbox/: Cargo.toml
crates/agnosai-sandbox/src/: lib.rs  manager.rs  oci.rs  policy.rs  process.rs  python.rs  wasm.rs
crates/agnosai-server/: Cargo.toml
crates/agnosai-server/src/: auth.rs  lib.rs  main.rs  sse.rs  state.rs
crates/agnosai-server/src/routes/: a2a.rs  agents.rs  crews.rs  definitions.rs  health.rs  mcp.rs  mod.rs  sse.rs  tools.rs
crates/agnosai-tools/: Cargo.toml
crates/agnosai-tools/src/: lib.rs  native.rs  python_tool.rs  registry.rs  wasm_tool.rs
crates/agnosai-tools/src/builtin/: delta.rs  echo.rs  json_transform.rs  mneme.rs  synapse.rs
docs/: index.md
docs/adr/: 001-separate-repo.md  002-ecosystem-tools.md  003-llm-native-http.md  004-concurrency-model.md  005-ai-hwaccel-integration.md
docs/architecture/: overview.md
docs/development/: comparison-crewai.md  ifran-integration.md  performance.md  roadmap.md  threat-model.md
docs/guides/: adding-providers.md  adding-tools.md  adding-wasm-tools.md  api-reference.md  crew-patterns.md  getting-started.md
examples/: simple_crew.rs
examples/wasm-tools/hello-tool/: Cargo.toml  manifest.json
examples/wasm-tools/hello-tool/src/: main.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_agent_definition.rs  fuzz_crew_request.rs  fuzz_preset_json.rs  fuzz_tool_input.rs
scripts/: bench-history.sh  compare-backends.sh  version-bump.sh
sdk/agnosai-tool-sdk/: Cargo.toml
sdk/agnosai-tool-sdk/src/: lib.rs
src/: lib.rs  main.rs  telemetry.rs
src/core/: agent.rs  crew.rs  error.rs  message.rs  mod.rs  resource.rs  task.rs
src/definitions/: assembler.rs  k8s_crd.rs  loader.rs  mod.rs  packaging.rs  versioning.rs
src/fleet/: coordinator.rs  cost_planning.rs  discovery.rs  environment.rs  federation.rs  gpu.rs  mod.rs  placement.rs  registry.rs  relay.rs  state.rs  topology.rs
src/learning/: capability.rs  optimizer.rs  profile.rs  replay.rs  strategy.rs
src/llm/: budget.rs  cache.rs  inference_queue.rs  mod.rs  provider.rs  rate_limiter.rs  retry.rs  router.rs
src/llm/providers/: anthropic.rs  deepseek.rs  groq.rs  hoosh.rs  lmstudio.rs  mistral.rs  ollama.rs  openai.rs
src/orchestrator/: approval.rs  budget.rs  crew_runner.rs  durable_state.rs  hierarchical.rs  ipc.rs  memory.rs  mod.rs  multi_tenant.rs  orchestrator.rs  output_validation.rs  plan_cache.rs  pubsub.rs  scheduler.rs  scoring.rs
src/presets/: data-engineering-large.json  data-engineering-standard.json  design-large.json  design-lean.json  design-standard.json  devops-large.json  devops-lean.json  devops-standard.json  quality-large.json  security-large.json  security-lean.json  security-standard.json  software-engineering-large.json  software-engineering-standard.json
src/sandbox/: kavach_bridge.rs  manager.rs  mod.rs  oci.rs  policy.rs  process.rs  python.rs  wasm.rs
src/server/: auth.rs  hot_config.rs  mod.rs  output_filter.rs  prometheus.rs  prompt_guard.rs  rate_limit.rs  sse.rs  ssrf.rs  state.rs
src/server/routes/: a2a.rs  agents.rs  approval.rs  crews.rs  dashboard.rs  definitions.rs  health.rs  mcp.rs  mod.rs  sse.rs  tools.rs
src/telemetry/: genai.rs  mod.rs
src/tools/: mod.rs  native.rs  python_tool.rs  registry.rs  remote_registry.rs  wasm_loader.rs  wasm_tool.rs
src/tools/builtin/: delta.rs  echo.rs  json_transform.rs  load_testing.rs  mneme.rs  mod.rs  security_audit.rs  synapse.rs
supply-chain/: audits.toml  config.toml
tests/: crew_with_tools.rs
tests/fixtures/: test_rsa_private.pem  test_rsa_public.pem
tests/integration/: Cargo.toml  crew_with_tools.rs
