[package]
name = "agnosai"
description = "Provider-agnostic AI orchestration framework"
version = "2026.3.19"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/maccracken/agnosai"
rust-version = "1.89"

[[bin]]
name = "agnosai-server"
path = "src/main.rs"

[features]
default = []
full = ["sandbox", "fleet", "definitions", "hwaccel"]
sandbox = ["dep:wasmtime", "dep:wasmtime-wasi"]
fleet = []
definitions = ["dep:serde_yaml", "dep:zip"]
hwaccel = ["dep:ai-hwaccel"]

[dependencies]
# Async runtime
tokio = { version = "1", features = ["io-util", "net", "sync", "rt-multi-thread", "macros", "time", "process"] }

# HTTP
axum = "0.8"
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = { version = "0.9", optional = true }

# Concurrency
dashmap = "6"

# Error handling
thiserror = "2"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# URL parsing
url = "2"

# IDs & time
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# TLS
rustls = "0.23"

# WASM sandbox
wasmtime = { version = "42", optional = true }
wasmtime-wasi = { version = "42", optional = true }

# RNG
rand = "0.8"

# Archive (definitions)
zip = { version = "2", optional = true }

# Streaming
async-stream = "0.3"
futures = "0.3"

# Hardware detection
ai-hwaccel = { path = "../ai-hwaccel", optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tokio-test = "0.4"
tempfile = "3"
tower = "0.5"
wat = "1"
ai-hwaccel = { path = "../ai-hwaccel" }

[[bench]]
name = "resource"
harness = false
required-features = ["hwaccel"]

[[bench]]
name = "serde_types"
harness = false

[[bench]]
name = "scheduler"
harness = false

[[bench]]
name = "scoring"
harness = false

[[bench]]
name = "placement"
harness = false
required-features = ["fleet"]

[[test]]
name = "crew_with_tools"
path = "tests/crew_with_tools.rs"

[profile.bench]
opt-level = 3
lto = "thin"

[profile.release]
opt-level = 2
lto = "fat"
strip = true
panic = "abort"
codegen-units = 1
