[package]
name = "agnosai"
description = "Provider-agnostic AI orchestration framework"
version = "0.25.3"
edition = "2024"
license = "AGPL-3.0-only"
repository = "https://github.com/maccracken/agnosai"
homepage = "https://github.com/maccracken/agnosai"
documentation = "https://docs.rs/agnosai"
readme = "README.md"
keywords = ["ai", "agent", "orchestration", "llm", "multi-agent"]
categories = ["science", "asynchronous"]
rust-version = "1.89"
exclude = [
    ".claude/",
    ".github/",
    "docs/",
    "scripts/",
    "rust_out/",
]

[[bin]]
name = "agnosai-server"
path = "src/main.rs"

[features]
default = []
full = ["sandbox", "fleet", "definitions", "hwaccel", "otel", "kavach", "majra"]
otel = ["hoosh/otel"]
sandbox = ["dep:wasmtime", "dep:wasmtime-wasi"]
kavach = ["dep:kavach"]
majra = ["dep:majra"]
fleet = []
definitions = ["dep:serde_yaml", "dep:zip"]
hwaccel = ["dep:ai-hwaccel"]

[dependencies]
# Async runtime
tokio = { version = "1", features = ["io-util", "net", "sync", "rt-multi-thread", "macros", "time", "process"] }

# HTTP
axum = "0.8"
tower = { version = "0.5", features = ["limit"] }
reqwest = { version = "0.13", features = ["json", "query", "stream", "rustls"], default-features = false }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = { version = "0.9", optional = true }

# Concurrency
dashmap = "6"

# Error handling
thiserror = "2"

# JWT
jsonwebtoken = { version = "10", features = ["aws_lc_rs"] }

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# URL parsing
url = "2"

# IDs & time
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# TLS
rustls = "0.23"

# WASM sandbox
wasmtime = { version = "43", optional = true }
wasmtime-wasi = { version = "43", optional = true }

# RNG
rand = "0.9"

# Archive (definitions)
zip = { version = "8", optional = true }

# Streaming
async-stream = "0.3"
futures = "0.3"

# LLM inference gateway
hoosh = { version = "0.25.3", default-features = false, features = ["all-providers"] }

# Personality & emotion engine
bhava = { version = "1", default-features = false, features = ["traits", "mood", "archetype", "sentiment"] }

# Hardware detection
ai-hwaccel = { version = "0.23.3", optional = true }

# Sandbox execution framework
kavach = { version = "1.0.1", default-features = false, features = ["process"], optional = true }

# Distributed queue & multiplex engine
majra = { version = "1.0.1", default-features = false, features = ["queue", "ratelimit", "pubsub"], optional = true }

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports", "async_tokio"] }
tokio-test = "0.4"
tempfile = "3"
tower = "0.5"
wat = "1"
ai-hwaccel = "0.23.3"

[[bench]]
name = "resource"
harness = false
required-features = ["hwaccel"]

[[bench]]
name = "serde_types"
harness = false

[[bench]]
name = "scheduler"
harness = false

[[bench]]
name = "scoring"
harness = false

[[bench]]
name = "placement"
harness = false
required-features = ["fleet"]

[[bench]]
name = "pubsub"
harness = false

[[bench]]
name = "relay"
harness = false
required-features = ["fleet"]

[[bench]]
name = "learning"
harness = false

[[bench]]
name = "tools"
harness = false

[[bench]]
name = "orchestrator"
harness = false

[[bench]]
name = "llm_router"
harness = false

[[bench]]
name = "definitions"
harness = false
required-features = ["definitions"]

[[bench]]
name = "audit"
harness = false

[[bench]]
name = "server"
harness = false

[[bench]]
name = "sandbox"
harness = false
required-features = ["sandbox"]

[[bench]]
name = "ipc"
harness = false

[[bench]]
name = "fleet"
harness = false
required-features = ["fleet"]

[[test]]
name = "crew_with_tools"
path = "tests/crew_with_tools.rs"

[profile.bench]
opt-level = 3
lto = "thin"

[profile.release]
opt-level = 2
lto = "fat"
strip = true
panic = "abort"
codegen-units = 1
