[package]
name = "agnosai-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dependencies.agnosai]
path = ".."

# Fuzz targets

[[bin]]
name = "fuzz_agent_definition"
path = "fuzz_targets/fuzz_agent_definition.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_crew_request"
path = "fuzz_targets/fuzz_crew_request.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_preset_json"
path = "fuzz_targets/fuzz_preset_json.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_tool_input"
path = "fuzz_targets/fuzz_tool_input.rs"
test = false
doc = false
bench = false

[workspace]
members = ["."]
