[package]
name = "agnosai-fleet"
description = "Distributed fleet coordination, GPU scheduling, and federation for AgnosAI"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
agnosai-core = { workspace = true }
tokio = { workspace = true }
redis = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
dashmap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
