[package]
name = "agnosai-sandbox"
description = "Tool execution isolation — WASM, process, and OCI sandboxing for AgnosAI"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
agnosai-core = { workspace = true }
tokio = { workspace = true }
wasmtime = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
