[package]
name = "agnosai-server"
description = "HTTP/gRPC API server — REST, MCP, A2A, and SSE for AgnosAI"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "agnosai-server"
path = "src/main.rs"

[dependencies]
agnosai-core = { workspace = true }
agnosai-orchestrator = { workspace = true }
agnosai-llm = { workspace = true }
agnosai-fleet = { workspace = true }
agnosai-tools = { workspace = true }
agnosai-definitions = { workspace = true }
agnosai-learning = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
tower = "0.5"
