[package]
name = "agnosai-tools"
description = "Tool registry and execution — native, WASM, and Python bridge for AgnosAI"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
agnosai-core = { workspace = true }
agnosai-sandbox = { workspace = true }
tokio = { workspace = true }
dashmap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
