[package]
name = "agnosai-tool-sdk"
description = "SDK for building AgnosAI WASM tools"
version = "1.1.0"
edition = "2024"
license = "GPL-3.0-only"
repository = "https://github.com/maccracken/agnosai"
readme = "README.md"
keywords = ["agnosai", "wasm", "tool", "sdk", "plugin"]
categories = ["wasm", "development-tools"]
rust-version = "1.89"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
