[package]
name = "agnosai-integration-tests"
version = "0.1.0"
edition = "2024"
publish = false

# Integration tests are declared as [[test]] targets so `cargo test` finds them.
[[test]]
name = "crew_with_tools"
path = "crew_with_tools.rs"

[dependencies]
agnosai-core = { path = "../../crates/agnosai-core" }
agnosai-orchestrator = { path = "../../crates/agnosai-orchestrator" }
agnosai-tools = { path = "../../crates/agnosai-tools" }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
